// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots EngagementComparisonChart should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid #E2E8ED",
          "borderRadius": "5px",
          "boxShadow": "0px 0px 10px rgba(48, 71, 89, 0.05)",
          "margin": "0 0 2rem",
        }
      }
    >
      <header
        style={
          Object {
            "alignItems": "center",
            "borderBottom": "1px solid #ECEEEF",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "1.5rem",
          }
        }
      >
        <h2
          className="sc-dnqmqq CwTMq"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Engagement
             comparison
          </span>
        </h2>
      </header>
      <div
        className="sc-VigVT knyrTu"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(255, 255, 255, 1)",
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "textAlign": "center",
              "transition": "opacity 350ms ease-in-out",
            }
          }
        >
          <div
            style={
              Object {
                "background": "white",
                "boxSizing": "border-box",
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 30,
                "marginRight": 30,
              }
            }
          >
            <h1>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1.25rem",
                    "fontWeight": 400,
                  }
                }
              >
                We couldn't find any analytics for this date range.
              </span>
            </h1>
            <p
              style={
                Object {
                  "marginBottom": 30,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Try selecting a longer date range, or share something and check back tomorrow :)
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots EngagementComparisonChart should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid #E2E8ED",
          "borderRadius": "5px",
          "boxShadow": "0px 0px 10px rgba(48, 71, 89, 0.05)",
          "margin": "0 0 2rem",
        }
      }
    >
      <header
        style={
          Object {
            "alignItems": "center",
            "borderBottom": "1px solid #ECEEEF",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "1.5rem",
          }
        }
      >
        <h2
          className="sc-dnqmqq CwTMq"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Engagement
             comparison
          </span>
        </h2>
      </header>
      <div
        className="sc-gqjmRU fgNPjU"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(255,255,255,.95)",
              "border": "none",
              "display": "flex",
              "justifyContent": "center",
              "maxHeight": "none",
              "minHeight": "8rem",
              "textAlign": "center",
              "transition": "opacity 350ms ease-in-out",
              "zIndex": 2,
            }
          }
        >
          <div
            style={
              Object {
                "background": "none",
                "borderRadius": "2px",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots EngagementComparisonChart should render the engagement comparison chart for a multiple profiles 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid #E2E8ED",
          "borderRadius": "5px",
          "boxShadow": "0px 0px 10px rgba(48, 71, 89, 0.05)",
          "margin": "0 0 2rem",
        }
      }
    >
      <header
        style={
          Object {
            "alignItems": "center",
            "borderBottom": "1px solid #ECEEEF",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "1.5rem",
          }
        }
      >
        <h2
          className="sc-dnqmqq CwTMq"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Engagement
             comparison
          </span>
        </h2>
      </header>
      <div
        className="sc-gZMcBi cCickz"
      >
        <div />
      </div>
      <section
        className="sc-bZQynM jQlKhY"
      >
        <ul
          className="sc-EHOje gptsFE"
        >
          <li
            style={
              Object {
                "boxSizing": "border-box",
                "display": "flex",
                "flexGrow": 1,
                "listStyle": "none",
                "paddingBottom": "15px",
                "width": "25%",
              }
            }
          >
            <div
              className="sc-gzVnrw azIqp"
            >
              <span
                className="sc-bwzfXH ghuPdm"
              >
                <span
                  className="sc-bdVaJa bjwIvU"
                >
                  <img
                    alt=""
                    src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
                    style={
                      Object {
                        "borderRadius": "50%",
                        "height": "26px",
                        "marginBottom": undefined,
                        "marginTop": undefined,
                        "maxHeight": undefined,
                        "maxWidth": undefined,
                        "minHeight": undefined,
                        "minWidth": undefined,
                        "objectFit": undefined,
                        "width": "26px",
                      }
                    }
                  />
                </span>
                <div
                  style={
                    Object {
                      "background": "#fff",
                      "border": "#fff 1px solid",
                      "borderRadius": "50%",
                      "height": "14px",
                      "left": "20px",
                      "position": "absolute",
                      "top": "20px",
                      "width": "14px",
                    }
                  }
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#55acee",
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="twitter"
                    >
                      <g
                        fillRule="evenodd"
                      >
                        <path
                          d="M0,8 C0,3.581722 3.59071231,0 8,0 L8,0 C12.418278,0 16,3.59071231 16,8 L16,8 C16,12.418278 12.4092877,16 8,16 L8,16 C3.581722,16 0,12.4092877 0,8 L0,8 Z M12,5.32763533 C11.7037037,5.46723647 11.3888889,5.56695157 11.0555556,5.60683761 C11.3981481,5.38746439 11.6574074,5.03846154 11.7777778,4.62962963 C11.462963,4.82905983 11.1111111,4.97863248 10.7407407,5.05840456 C10.4351852,4.71937322 10.0092593,4.5 9.53703704,4.5 C8.62962963,4.5 7.89814815,5.28774929 7.89814815,6.26495726 C7.89814815,6.4045584 7.90740741,6.54415954 7.93518519,6.67378917 C6.57407407,6.59401709 5.37037037,5.92592593 4.55555556,4.85897436 C4.41666667,5.11823362 4.33333333,5.38746439 4.33333333,5.71652422 C4.33333333,6.32478632 4.62037037,6.86324786 5.06481481,7.18233618 C4.7962963,7.17236467 4.5462963,7.09259259 4.32407407,6.96296296 L4.32407407,6.98290598 C4.32407407,7.84045584 4.88888889,8.55840456 5.63888889,8.71794872 C5.5,8.75783476 5.35185185,8.77777778 5.2037037,8.77777778 C5.10185185,8.77777778 5,8.76780627 4.89814815,8.74786325 C5.10185185,9.44586895 5.71296296,9.96438746 6.42592593,9.97435897 C5.87037037,10.4529915 5.15740741,10.8119658 4.38888889,10.8119658 C4.25925926,10.8119658 4.12962963,10.8019943 4,10.7820513 C4.72222222,11.2806268 5.59259259,11.5 6.51851852,11.5 C9.53703704,11.5 11.1851852,8.80769231 11.1851852,6.47435897 L11.1851852,6.24501425 C11.5,5.9957265 11.7777778,5.68660969 12,5.32763533 L12,5.32763533 Z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
              </span>
            </div>
            <div>
              <span
                style={
                  Object {
                    "display": "block",
                    "fontSize": "0.75rem",
                    "fontWeight": 600,
                    "marginTop": "15px",
                  }
                }
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <div
                      className="sc-htoDjs jxuJsQ"
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 700,
                          }
                        }
                      >
                        Buffer
                      </span>
                    </div>
                  </span>
                </span>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#323b43",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "2rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        400
                      </span>
                    </span>
                  </span>
                </div>
                <div>
                  <span
                    style={
                      Object {
                        "display": "inline-block",
                        "height": "1rem",
                        "marginLeft": "10px",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#2fd566",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shamrock"
                      >
                        <path
                          d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        />
                      </g>
                    </svg>
                  </span>
                  <div
                    style={
                      Object {
                        "color": "#2FD566",
                        "display": "inline-block",
                        "fontSize": "18px",
                        "fontWeight": 600,
                        "marginLeft": "5px",
                      }
                    }
                  >
                    <span>
                      <span
                        style={
                          Object {
                            "color": "shamrock",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1.25rem",
                          }
                        }
                      >
                        <span>
                          20
                        </span>
                        %
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            style={
              Object {
                "boxSizing": "border-box",
                "display": "flex",
                "flexGrow": 1,
                "listStyle": "none",
                "paddingBottom": "15px",
                "width": "25%",
              }
            }
          >
            <div
              className="sc-gzVnrw azIqp"
            >
              <span
                className="sc-bwzfXH ghuPdm"
              >
                <span
                  className="sc-bdVaJa hWwCRQ"
                >
                  <img
                    alt=""
                    src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
                    style={
                      Object {
                        "borderRadius": "50%",
                        "height": "26px",
                        "marginBottom": undefined,
                        "marginTop": undefined,
                        "maxHeight": undefined,
                        "maxWidth": undefined,
                        "minHeight": undefined,
                        "minWidth": undefined,
                        "objectFit": undefined,
                        "width": "26px",
                      }
                    }
                  />
                </span>
                <div
                  style={
                    Object {
                      "background": "#fff",
                      "border": "#fff 1px solid",
                      "borderRadius": "50%",
                      "height": "14px",
                      "left": "20px",
                      "position": "absolute",
                      "top": "20px",
                      "width": "14px",
                    }
                  }
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#55acee",
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="twitter"
                    >
                      <g
                        fillRule="evenodd"
                      >
                        <path
                          d="M0,8 C0,3.581722 3.59071231,0 8,0 L8,0 C12.418278,0 16,3.59071231 16,8 L16,8 C16,12.418278 12.4092877,16 8,16 L8,16 C3.581722,16 0,12.4092877 0,8 L0,8 Z M12,5.32763533 C11.7037037,5.46723647 11.3888889,5.56695157 11.0555556,5.60683761 C11.3981481,5.38746439 11.6574074,5.03846154 11.7777778,4.62962963 C11.462963,4.82905983 11.1111111,4.97863248 10.7407407,5.05840456 C10.4351852,4.71937322 10.0092593,4.5 9.53703704,4.5 C8.62962963,4.5 7.89814815,5.28774929 7.89814815,6.26495726 C7.89814815,6.4045584 7.90740741,6.54415954 7.93518519,6.67378917 C6.57407407,6.59401709 5.37037037,5.92592593 4.55555556,4.85897436 C4.41666667,5.11823362 4.33333333,5.38746439 4.33333333,5.71652422 C4.33333333,6.32478632 4.62037037,6.86324786 5.06481481,7.18233618 C4.7962963,7.17236467 4.5462963,7.09259259 4.32407407,6.96296296 L4.32407407,6.98290598 C4.32407407,7.84045584 4.88888889,8.55840456 5.63888889,8.71794872 C5.5,8.75783476 5.35185185,8.77777778 5.2037037,8.77777778 C5.10185185,8.77777778 5,8.76780627 4.89814815,8.74786325 C5.10185185,9.44586895 5.71296296,9.96438746 6.42592593,9.97435897 C5.87037037,10.4529915 5.15740741,10.8119658 4.38888889,10.8119658 C4.25925926,10.8119658 4.12962963,10.8019943 4,10.7820513 C4.72222222,11.2806268 5.59259259,11.5 6.51851852,11.5 C9.53703704,11.5 11.1851852,8.80769231 11.1851852,6.47435897 L11.1851852,6.24501425 C11.5,5.9957265 11.7777778,5.68660969 12,5.32763533 L12,5.32763533 Z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
              </span>
            </div>
            <div>
              <span
                style={
                  Object {
                    "display": "block",
                    "fontSize": "0.75rem",
                    "fontWeight": 600,
                    "marginTop": "15px",
                  }
                }
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <div
                      className="sc-htoDjs jxuJsQ"
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 700,
                          }
                        }
                      >
                        Joel Gascoigne
                      </span>
                    </div>
                  </span>
                </span>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#323b43",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "2rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        700
                      </span>
                    </span>
                  </span>
                </div>
                <div>
                  <span
                    style={
                      Object {
                        "display": "inline-block",
                        "height": "1rem",
                        "marginLeft": "10px",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#ff1e1e",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="torchRed"
                      >
                        <path
                          d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                          transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                        />
                      </g>
                    </svg>
                  </span>
                  <div
                    style={
                      Object {
                        "color": "#FF1E1E",
                        "display": "inline-block",
                        "fontSize": "18px",
                        "fontWeight": 600,
                        "marginLeft": "5px",
                      }
                    }
                  >
                    <span>
                      <span
                        style={
                          Object {
                            "color": "torchRed",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1.25rem",
                          }
                        }
                      >
                        <span>
                          10
                        </span>
                        %
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </section>
    </div>
  </div>
</span>
`;

exports[`Snapshots EngagementComparisonChart should render the engagement comparison chart for a single profile 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#fff",
          "border": "1px solid #E2E8ED",
          "borderRadius": "5px",
          "boxShadow": "0px 0px 10px rgba(48, 71, 89, 0.05)",
          "margin": "0 0 2rem",
        }
      }
    >
      <header
        style={
          Object {
            "alignItems": "center",
            "borderBottom": "1px solid #ECEEEF",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "1.5rem",
          }
        }
      >
        <h2
          className="sc-dnqmqq CwTMq"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Engagement
             comparison
          </span>
        </h2>
      </header>
      <div
        className="sc-iwsKbI MLANU"
      >
        <div />
      </div>
      <section
        className="sc-bZQynM jQlKhY"
      >
        <ul
          className="sc-EHOje gptsFE"
        >
          <li
            style={
              Object {
                "boxSizing": "border-box",
                "display": "flex",
                "flexGrow": 1,
                "listStyle": "none",
                "paddingBottom": "15px",
                "width": "25%",
              }
            }
          >
            <div
              className="sc-gzVnrw azIqp"
            >
              <span
                className="sc-bwzfXH ghuPdm"
              >
                <span
                  className="sc-bdVaJa bjwIvU"
                >
                  <img
                    alt=""
                    src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
                    style={
                      Object {
                        "borderRadius": "50%",
                        "height": "26px",
                        "marginBottom": undefined,
                        "marginTop": undefined,
                        "maxHeight": undefined,
                        "maxWidth": undefined,
                        "minHeight": undefined,
                        "minWidth": undefined,
                        "objectFit": undefined,
                        "width": "26px",
                      }
                    }
                  />
                </span>
                <div
                  style={
                    Object {
                      "background": "#fff",
                      "border": "#fff 1px solid",
                      "borderRadius": "50%",
                      "height": "14px",
                      "left": "20px",
                      "position": "absolute",
                      "top": "20px",
                      "width": "14px",
                    }
                  }
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#55acee",
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="twitter"
                    >
                      <g
                        fillRule="evenodd"
                      >
                        <path
                          d="M0,8 C0,3.581722 3.59071231,0 8,0 L8,0 C12.418278,0 16,3.59071231 16,8 L16,8 C16,12.418278 12.4092877,16 8,16 L8,16 C3.581722,16 0,12.4092877 0,8 L0,8 Z M12,5.32763533 C11.7037037,5.46723647 11.3888889,5.56695157 11.0555556,5.60683761 C11.3981481,5.38746439 11.6574074,5.03846154 11.7777778,4.62962963 C11.462963,4.82905983 11.1111111,4.97863248 10.7407407,5.05840456 C10.4351852,4.71937322 10.0092593,4.5 9.53703704,4.5 C8.62962963,4.5 7.89814815,5.28774929 7.89814815,6.26495726 C7.89814815,6.4045584 7.90740741,6.54415954 7.93518519,6.67378917 C6.57407407,6.59401709 5.37037037,5.92592593 4.55555556,4.85897436 C4.41666667,5.11823362 4.33333333,5.38746439 4.33333333,5.71652422 C4.33333333,6.32478632 4.62037037,6.86324786 5.06481481,7.18233618 C4.7962963,7.17236467 4.5462963,7.09259259 4.32407407,6.96296296 L4.32407407,6.98290598 C4.32407407,7.84045584 4.88888889,8.55840456 5.63888889,8.71794872 C5.5,8.75783476 5.35185185,8.77777778 5.2037037,8.77777778 C5.10185185,8.77777778 5,8.76780627 4.89814815,8.74786325 C5.10185185,9.44586895 5.71296296,9.96438746 6.42592593,9.97435897 C5.87037037,10.4529915 5.15740741,10.8119658 4.38888889,10.8119658 C4.25925926,10.8119658 4.12962963,10.8019943 4,10.7820513 C4.72222222,11.2806268 5.59259259,11.5 6.51851852,11.5 C9.53703704,11.5 11.1851852,8.80769231 11.1851852,6.47435897 L11.1851852,6.24501425 C11.5,5.9957265 11.7777778,5.68660969 12,5.32763533 L12,5.32763533 Z"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
              </span>
            </div>
            <div>
              <span
                style={
                  Object {
                    "display": "block",
                    "fontSize": "0.75rem",
                    "fontWeight": 600,
                    "marginTop": "15px",
                  }
                }
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <div
                      className="sc-htoDjs jxuJsQ"
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 700,
                          }
                        }
                      >
                        Buffer
                      </span>
                    </div>
                  </span>
                </span>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#323b43",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "2rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        400
                      </span>
                    </span>
                  </span>
                </div>
                <div>
                  <span
                    style={
                      Object {
                        "display": "inline-block",
                        "height": "1rem",
                        "marginLeft": "10px",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#2fd566",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shamrock"
                      >
                        <path
                          d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        />
                      </g>
                    </svg>
                  </span>
                  <div
                    style={
                      Object {
                        "color": "#2FD566",
                        "display": "inline-block",
                        "fontSize": "18px",
                        "fontWeight": 600,
                        "marginLeft": "5px",
                      }
                    }
                  >
                    <span>
                      <span
                        style={
                          Object {
                            "color": "shamrock",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1.25rem",
                          }
                        }
                      >
                        <span>
                          20
                        </span>
                        %
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </section>
    </div>
  </div>
</span>
`;
